Удалил дублирующие методы ручного удаления