@@ -141,10 +141,6 @@ public class FilmDbStorage implements FilmStorage {
 
     @Override
     public void delete(Long id) {
-        if (findById(id).isEmpty()) {
-            throw new NotFoundException("Фильм с id " + id + " не найден");
-        }
-
         String query = "delete from films where film_id = ?";
         jdbc.update(query, id);
     }
@@ -253,7 +249,7 @@ public class FilmDbStorage implements FilmStorage {
     }
 
     private void populateLikesAndGenres(Collection<Film> films) {
-        List<Long> filmIds = films.stream().map(Film::getId).collect(Collectors.toList());
+        List<Long> filmIds = films.stream().map(Film::getId).toList();
         Map<Long, Set<Genre>> genresByFilmId = findGenresByFilmIds(filmIds);
         Map<Long, Set<Long>> likesByFilmId = findLikesByFilmIds(filmIds);
         for (Film film : films) {
@@ -263,12 +259,6 @@ public class FilmDbStorage implements FilmStorage {
             Set<Long> likes = likesByFilmId.getOrDefault(filmId, new HashSet<>());
             film.setLikes(likes);
         }
-    }
-
-    @Override
-    public void removeLikesByUser(Long userId) {
-        String query = "delete from film_likes where user_id = ?";
-        jdbc.update(query, userId);
     }
 
     public List<Film> getPopularFilms(int count, Integer genreId, Integer year) {
